# realistic-problem-notes

./: .gitignore  .pdm-python  .pdm.toml  README.md  pyproject.toml
001house mortgage/: mortgage.ipynb  mortgageCalc.py
002BirthPopulation/: solve.ipynb
002electricity bill/: electricityBill.ipynb
003ScreenArea/: solve.ipynb
004taxCalc/: solve.ipynb
