[project]
name = "realistic-problem-notes"
version = "0.0.1"
description = ""
authors = [{ name = "mudssky", email = "mudssky@gmail.com" }]
dependencies = [
    "pandas>=1.5.3",
    "matplotlib>=3.6.3",
    "pyecharts>=2.0.1",
    "plotly>=5.12.0",
    "ipykernel>=6.29.3",
    "scipy>=1.9.3",
    "numpy>=1.24.1",
    "autopep8>=2.0.1",
    "jupytext>=1.14.4",
    "sympy>=1.11.1",
]
requires-python = ">=3.11"
license = { text = "MIT" }
